Vista varios catalogos
-Modificada la vista de los siguientes catalogos:
  · Insectos
  · Crit. marinas
  · Fosiles
  · Arte
  · Vecinos

Falta cambiarles el fondo y la burbuja de titulo

--- a/project/myCrossing/src/app/cat-criaturas-marinas/cat-criaturas-marinas.component.css
+++ b/project/myCrossing/src/app/cat-criaturas-marinas/cat-criaturas-marinas.component.css
@@ -12,6 +12,8 @@ h2, span{
 
 .pag-menu{
   width: 100%;
+  position: relative;
+  margin-top: 1vw;
 }
 
 .grid-w-gap{
@@ -21,6 +23,8 @@ h2, span{
 .grid-item-wrap{
   background-color: #b8b9ff;
   position: relative;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+  transition: 0.3s;
 }
 
 .editar{
@@ -38,12 +42,17 @@ h2, span{
 
 .b-darkGreen{
   background-color: rgb(157 228 163);
+  transform: scale(1.1);
+  font-weight: bold;
 }
 
 #wrap-filtros{
   padding-bottom: 1vw;
   display:flex;
   margin: auto;
+  background-color: #b8b9ff;
+  border-radius: 50px;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
 }
 
 #filtro-sombra > button, #filtro-usuario > button, #filtro-velocidad > button{
@@ -138,4 +147,32 @@ h2, span{
 .editar-left{
   left: 1vw;
   top: 1vw;
+}
+
+.bg-scroll-1{
+  background-image: url("../../assets/images/pez-bg-0.png");
+}
+
+
+.bg-scroll-2{
+  background-image: url("../../assets/images/pez-bg-1.png");
+}
+
+.no-result{
+  background-color: #b8b9ff;
+  border-radius: 50px;
+  position:relative;
+  margin: 3% 0;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
+.burbuja-title{
+  background-image: url("../../assets/images/bubble-pez.png");
+}
+
+:host{
+  background-color: #8181de;
+}
+
+.wrap-scale:hover{
+  background-color: #9d8cc5;
 }
