--- a/project/myCrossing/src/app/cat-vecinos/cat-vecinos.component.css
+++ b/project/myCrossing/src/app/cat-vecinos/cat-vecinos.component.css
@@ -12,6 +12,8 @@ h2, span{
 
 .pag-menu{
     width: 100%;
+    position: relative;
+    margin-top: 1vw;
 }
 
 .grid-w-gap{
@@ -22,6 +24,8 @@ h2, span{
 .grid-item-wrap{
     background-color: #f7cda4;
     position: relative;
+    box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+    transition: 0.3s;
 }
 
 .editar{
@@ -39,12 +43,17 @@ h2, span{
 
 .b-darkGreen{
     background-color: rgb(157 228 163);
+    transform: scale(1.1);
+    font-weight: bold;
 }
 
 #wrap-filtros{
     padding-bottom: 1vw;
     display:flex;
     margin: auto;
+    background-color: #f7cda4;
+    border-radius: 50px;
+    box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
 }
 
 #filtro-personalidad > button{
@@ -124,4 +133,33 @@ h2, span{
     padding: 0;
     width: 10vw;
     height: 1.7vw;
+}
+
+.bg-scroll-1{
+  background-image: url("../../assets/images/pez-bg-0.png");
+}
+
+.bg-scroll-2{
+  background-image: url("../../assets/images/pez-bg-1.png");
+}
+
+.no-result{
+  background-color: #f7cda4;
+  border-radius: 50px;
+  position:relative;
+  margin: 3% 0;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
+
+.burbuja-title{
+  background-image: url("../../assets/images/bubble-pez.png");
+}
+
+:host{
+  background-color: #ff9d72;
+}
+
+.wrap-scale:hover{
+  background-color: #f1a75f;
+  ;
 }
