--- a/project/myCrossing/src/app/cat-arte/cat-arte.component.css
+++ b/project/myCrossing/src/app/cat-arte/cat-arte.component.css
@@ -2,14 +2,8 @@ span{
   font-size: 1.4vw;
 }
 
-h2, span, p{
+h2, span{
   text-align: center;
-}
-
-p{
-  margin: 0;
-  font-weight: bold;
-  font-size: 1.5vw;
 }
 
 .content-wrapper-bot{
@@ -18,6 +12,8 @@ p{
 
 .pag-menu{
   width: 100%;
+  position: relative;
+  margin-top: 1vw;
 }
 
 .grid-w-gap{
@@ -27,6 +23,8 @@ p{
 .grid-item-wrap{
   background-color: #f9ddb2;
   position: relative;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+  transition: 0.3s;
 }
 
 .editar{
@@ -44,6 +42,15 @@ p{
   height: 3vw;
 }
 
+#wrap-filtros{
+  padding-bottom: 1vw;
+  display:flex;
+  margin: auto;
+  background-color: #f9ddb2;
+  border-radius: 50px;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
+
 .b-variacion{
   border-radius: 50%;
   margin: 0 0.5vw;
@@ -54,6 +61,8 @@ p{
 
 .b-darkGreen{
   background-color: rgb(157 228 163);
+  transform: scale(1.1);
+  font-weight: bold;
 }
 
 .b-darkBlue{
@@ -92,11 +101,13 @@ p{
   font-size: 1.5vw;
   position: fixed;
   border-style: none;
-  padding: 3%;
+  padding: 1% 3%;
   border-radius: 15px;
-  background-color: #F7F3E8;
+  background-color: var(--blanco);
   box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
   z-index: 5;
+  font-weight: bold;
+  text-align: center;
 }
 
 .oscuro{
@@ -110,4 +121,28 @@ p{
 
 .shadow{
   box-shadow: 0px 0px 20px 0px rgb(23 23 23 / 55%);
+}
+
+.bg-scroll-1{
+  background-image: url("../../assets/images/pez-bg-0.png");
+}
+
+.bg-scroll-2{
+  background-image: url("../../assets/images/pez-bg-1.png");
+}
+
+.no-result{
+  background-color: #f9ddb2;
+  border-radius: 50px;
+  position:relative;
+  margin: 3% 0;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
+
+.burbuja-title{
+  background-image: url("../../assets/images/bubble-pez.png");
+}
+
+:host{
+  background-color: #efc985;
 }
