--- a/project/myCrossing/src/app/cat-criaturas-marinas/cat-criaturas-marinas.component.html
+++ b/project/myCrossing/src/app/cat-criaturas-marinas/cat-criaturas-marinas.component.html
@@ -1,34 +1,38 @@
+<div class="bg-scroll-1"></div>
+<div class="bg-scroll-2"></div>
 <!-- Filtros búsqueda -->
-<div class="content-wrapper-top" style="background-color: #8181de;">
-    <div style="margin-top: 4vw;">
-        <h2>Catálogo de Criaturas Marinas</h2>
+<div class="content-wrapper-top">
+    <div style="margin-top: 4vw;position:relative">
+        <div class="burbuja-title">
+          <h1>Catálogo de criaturas marinas</h1>
+        </div>
         <div id="wrap-filtros" class="flex-centered" style="align-items: unset;">
           <div style="width: 35%;" class="flex-column-centered">
             <h3>Sombra</h3>
             <div class="flex-centered" style="flex-wrap: wrap;" id="filtro-sombra">
-                <button class="boton-alargado" (click)="filtraShadow('X-Small')" [class]="this.filtroAcShadow == 'X-Small' ? 'b-verde' : 'b-azul b-azul-hover'">Diminuta</button>
-                <button class="boton-alargado" (click)="filtraShadow('Small')" [class]="this.filtroAcShadow == 'Small' ? 'b-verde' : 'b-azul b-azul-hover'">Pequeña</button>
-                <button class="boton-alargado" (click)="filtraShadow('Medium')" [class]="this.filtroAcShadow == 'Medium' ? 'b-verde' : 'b-azul b-azul-hover'">Mediana</button>
-                <button class="boton-alargado" (click)="filtraShadow('Large')" [class]="this.filtroAcShadow == 'Large' ? 'b-verde' : 'b-azul b-azul-hover'">Grande</button>
-                <button class="boton-alargado" (click)="filtraShadow('X-Large')" [class]="this.filtroAcShadow == 'X-Large' ? 'b-verde' : 'b-azul b-azul-hover'">Muy grande</button>
+                <button class="boton-alargado b-scale" (click)="filtraShadow('X-Small')" [class]="this.filtroAcShadow == 'X-Small' ? 'b-verde' : 'b-azul b-azul-hover'">Diminuta</button>
+                <button class="boton-alargado b-scale" (click)="filtraShadow('Small')" [class]="this.filtroAcShadow == 'Small' ? 'b-verde' : 'b-azul b-azul-hover'">Pequeña</button>
+                <button class="boton-alargado b-scale" (click)="filtraShadow('Medium')" [class]="this.filtroAcShadow == 'Medium' ? 'b-verde' : 'b-azul b-azul-hover'">Mediana</button>
+                <button class="boton-alargado b-scale" (click)="filtraShadow('Large')" [class]="this.filtroAcShadow == 'Large' ? 'b-verde' : 'b-azul b-azul-hover'">Grande</button>
+                <button class="boton-alargado b-scale" (click)="filtraShadow('X-Large')" [class]="this.filtroAcShadow == 'X-Large' ? 'b-verde' : 'b-azul b-azul-hover'">Muy grande</button>
               </div>
           </div>
           <div style="width: 35%;" class="flex-column-centered">
             <h3>Velocidad</h3>
             <div class="flex-centered" style="flex-wrap: wrap;" id="filtro-velocidad">
-                <button class="boton-alargado" (click)="filtraVelocidad('Stationary')" [class]="this.filtroAcVelocidad == 'Stationary' ? 'b-verde' : 'b-azul b-azul-hover'">Inmóvil</button>
-                <button class="boton-alargado" (click)="filtraVelocidad('Very slow')" [class]="this.filtroAcVelocidad == 'Very slow' ? 'b-verde' : 'b-azul b-azul-hover'">Muy lenta</button>
-                <button class="boton-alargado" (click)="filtraVelocidad('Slow')" [class]="this.filtroAcVelocidad == 'Slow' ? 'b-verde' : 'b-azul b-azul-hover'">Lenta</button>
-                <button class="boton-alargado" (click)="filtraVelocidad('Medium')" [class]="this.filtroAcVelocidad == 'Medium' ? 'b-verde' : 'b-azul b-azul-hover'">Media</button>
-                <button class="boton-alargado" (click)="filtraVelocidad('Fast')" [class]="this.filtroAcVelocidad == 'Fast' ? 'b-verde' : 'b-azul b-azul-hover'">Rápida</button>
-                <button class="boton-alargado" (click)="filtraVelocidad('Very fast')" [class]="this.filtroAcVelocidad == 'Very fast' ? 'b-verde' : 'b-azul b-azul-hover'">Muy rápida</button>
+                <button class="boton-alargado b-scale" (click)="filtraVelocidad('Stationary')" [class]="this.filtroAcVelocidad == 'Stationary' ? 'b-verde' : 'b-azul b-azul-hover'">Inmóvil</button>
+                <button class="boton-alargado b-scale" (click)="filtraVelocidad('Very slow')" [class]="this.filtroAcVelocidad == 'Very slow' ? 'b-verde' : 'b-azul b-azul-hover'">Muy lenta</button>
+                <button class="boton-alargado b-scale" (click)="filtraVelocidad('Slow')" [class]="this.filtroAcVelocidad == 'Slow' ? 'b-verde' : 'b-azul b-azul-hover'">Lenta</button>
+                <button class="boton-alargado b-scale" (click)="filtraVelocidad('Medium')" [class]="this.filtroAcVelocidad == 'Medium' ? 'b-verde' : 'b-azul b-azul-hover'">Media</button>
+                <button class="boton-alargado b-scale" (click)="filtraVelocidad('Fast')" [class]="this.filtroAcVelocidad == 'Fast' ? 'b-verde' : 'b-azul b-azul-hover'">Rápida</button>
+                <button class="boton-alargado b-scale" (click)="filtraVelocidad('Very fast')" [class]="this.filtroAcVelocidad == 'Very fast' ? 'b-verde' : 'b-azul b-azul-hover'">Muy rápida</button>
               </div>
           </div>
           <div class="flex-column-centered" style="width: 35%;">
             <input [formControl]="busqueda" class="text-input" style="width: 80%;margin-top: 2vw" type="text" placeholder="Buscar">
             <div class="flex-column-entered" style="margin:0.5vw" [style.display]="this._verif.user == null ? 'none' : 'block'" id="filtro-usuario">
-              <button class="boton-alargado" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul b-azul-hover'">Obtenidos</button>
-              <button class="boton-alargado" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul b-azul-hover'">Me faltan</button>
+              <button class="boton-alargado b-scale" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul b-azul-hover'">Obtenidos</button>
+              <button class="boton-alargado b-scale" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul b-azul-hover'">Me faltan</button>
             </div>
           </div>
         </div>
@@ -40,11 +44,11 @@
 
     <!-- Paginacion arriba -->
     <div class="pag-menu flex-centered">
-    <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
+    <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
     <ng-container *ngIf="this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length < 25; else paginacionComprimida">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter)">
-        <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+        <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
     </ng-container>
 
@@ -52,7 +56,7 @@
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(0, 11)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
@@ -64,12 +68,12 @@
         <!-- Paginacion mid -->
         <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length - 10">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
@@ -81,18 +85,18 @@
         <!-- Paginacion end -->
         <ng-container #midOfin *ngIf="this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length - 11 < page_number">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 12, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         </ng-container>
 
     </ng-template>
 
-    <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
+    <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
     </div>
 
     <!-- Grid -->
@@ -100,10 +104,10 @@
         <ng-container *ngFor="let creature of listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter | paginacion:page_number:max_items">
         <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
             <div class="check-container" *ngIf="this._verif.user != null">
-                <button [style.background-image]="this.listaUsuario.includes(creature.translations.spanish.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="boton-imagen editar" (click)="toggleCheck(creature)"></button>
+                <button [style.background-image]="this.listaUsuario.includes(creature.translations.spanish.replace(' ','')) ? 'url(../../assets/images/check-rojo.png)' : 'url(../../assets/images/check-gris.png)'" class="b-scale-xl boton-imagen editar" (click)="toggleCheck(creature)"></button>
             </div>
-            <div style="width: 8vw; height: 8vw;" class="flex-centered">
-              <img (click)="mostrar($event, creature)" [src]="creature.critterpediaImage" style="cursor: pointer;max-width: 100%;max-height: 100%;" [id]='creature.translations.spanish.replace(" ", "")'>
+            <div (click)="mostrar($event, creature)" style="cursor: pointer;width: 8vw; height: 8vw;" class="wrap-scale flex-centered">
+              <img [src]="creature.critterpediaImage" style="max-width: 100%;max-height: 100%;" [id]='creature.translations.spanish.replace(" ", "")'>
             </div>
             <span>{{creature.translations.spanish | capitalize}}</span>
         </div>
@@ -111,7 +115,7 @@
     </div>
 
     <ng-container *ngIf="(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter | paginacion:page_number:max_items).length == 0" >
-      <div class="flex-column-centered" style="margin: 3% 0">
+      <div class="flex-column-centered no-result" style="margin: 3% 0">
         <img src="../../assets/images/error.png" style="width: 10vw;">
         <p><strong>No hubo resultados</strong></p>
       </div>
@@ -119,11 +123,11 @@
 
     <!-- Paginacion abajo -->
     <div class="pag-menu flex-centered" [style.padding-top]="(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter | paginacion:page_number:max_items).length < 6 ? '14vw' : '0' ">
-      <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
+      <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
     <ng-container *ngIf="this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length < 25; else paginacionComprimida">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter)">
-        <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+        <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
     </ng-container>
 
@@ -131,7 +135,7 @@
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(0, 11)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
@@ -143,12 +147,12 @@
         <!-- Paginacion mid -->
         <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 10">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
@@ -160,18 +164,18 @@
         <!-- Paginacion end -->
         <ng-container #midOfin *ngIf="this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length - 11 < page_number">
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         <button class="b-darkBlue b-pag">·</button>
         <button class="b-darkBlue b-pag">·</button>
         <ng-container *ngFor="let pag of this.getPaginas(listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).slice(this.getPaginas(listaCreatures | filtroAc:nameFilter).length - 12, this.getPaginas(listaCreatures | filtroAc:nameFilter).length)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
         </ng-container>
 
     </ng-template>
 
-    <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
+    <button [style.visibility]="max_items < listaCreatures.length && page_number * max_items < (listaCreatures | filtroCategoriaCm:filtroAcShadow:filtroAcVelocidad | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaCreatures)"> > </button>
     </div>
 
 </div>
