--- a/project/myCrossing/src/app/cat-peces/cat-peces.component.css
+++ b/project/myCrossing/src/app/cat-peces/cat-peces.component.css
@@ -153,7 +153,6 @@ span{
     background-color: #dbdb9e;
   }
 
-
 .bg-scroll-1{
   background-image: url("../../assets/images/pez-bg-0.png");
 }
@@ -169,4 +168,8 @@ span{
   position:relative;
   margin: 3% 0;
   box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
+
+.wrap-scale:hover{
+  background-color: #b3c4da;
 }
