--- a/project/myCrossing/src/app/cat-vecinos/cat-vecinos.component.html
+++ b/project/myCrossing/src/app/cat-vecinos/cat-vecinos.component.html
@@ -1,19 +1,23 @@
+<div class="bg-scroll-1"></div>
+<div class="bg-scroll-2"></div>
 <!-- Filtros búsqueda -->
-<div class="content-wrapper-top" style="background-color: #ff9d72;">
-    <div style="margin-top: 4vw;">
-      <h2>Listado de Vecinos</h2>
+<div class="content-wrapper-top">
+    <div style="margin-top: 4vw;position:relative">
+      <div class="burbuja-title">
+        <h1>Listado de vecinos</h1>
+      </div>
       <div id="wrap-filtros" class="flex-centered" style="align-items: unset;">
         <div style="width: 35%;" class="flex-column-centered">
           <h3>Personalidad: </h3>
           <div class="flex-centered" style="flex-wrap: wrap;" id="filtro-personalidad">
-            <button class="boton-alargado" (click)="filtraPersonalidad('Cranky')" [class]="this.filtroAcPersonalidad == 'Cranky' ? 'b-verde' : 'b-azul b-azul-hover'">Malhumorado</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Peppy')" [class]="this.filtroAcPersonalidad == 'Peppy' ? 'b-verde' : 'b-azul b-azul-hover'">Vivaracha</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Big Sister')" [class]="this.filtroAcPersonalidad == 'Big Sister' ? 'b-verde' : 'b-azul b-azul-hover'">Hermana mayor</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Lazy')" [class]="this.filtroAcPersonalidad == 'Lazy' ? 'b-verde' : 'b-azul b-azul-hover'">Perezoso</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Normal')" [class]="this.filtroAcPersonalidad == 'Normal' ? 'b-verde' : 'b-azul b-azul-hover'">Dulce</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Snooty')" [class]="this.filtroAcPersonalidad == 'Snooty' ? 'b-verde' : 'b-azul b-azul-hover'">Presumida</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Jock')" [class]="this.filtroAcPersonalidad == 'Jock' ? 'b-verde' : 'b-azul b-azul-hover'">Deportista</button>
-            <button class="boton-alargado" (click)="filtraPersonalidad('Smug')" [class]="this.filtroAcPersonalidad == 'Smug' ? 'b-verde' : 'b-azul b-azul-hover'">Altanero</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Cranky')" [class]="this.filtroAcPersonalidad == 'Cranky' ? 'b-verde' : 'b-azul b-azul-hover'">Malhumorado</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Peppy')" [class]="this.filtroAcPersonalidad == 'Peppy' ? 'b-verde' : 'b-azul b-azul-hover'">Vivaracha</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Big Sister')" [class]="this.filtroAcPersonalidad == 'Big Sister' ? 'b-verde' : 'b-azul b-azul-hover'">Hermana mayor</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Lazy')" [class]="this.filtroAcPersonalidad == 'Lazy' ? 'b-verde' : 'b-azul b-azul-hover'">Perezoso</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Normal')" [class]="this.filtroAcPersonalidad == 'Normal' ? 'b-verde' : 'b-azul b-azul-hover'">Dulce</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Snooty')" [class]="this.filtroAcPersonalidad == 'Snooty' ? 'b-verde' : 'b-azul b-azul-hover'">Presumida</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Jock')" [class]="this.filtroAcPersonalidad == 'Jock' ? 'b-verde' : 'b-azul b-azul-hover'">Deportista</button>
+            <button class="boton-alargado b-scale" (click)="filtraPersonalidad('Smug')" [class]="this.filtroAcPersonalidad == 'Smug' ? 'b-verde' : 'b-azul b-azul-hover'">Altanero</button>
           </div>
         </div>
         <div style="width: 20%;justify-content: unset;margin: 0 1vw" class="flex-column-centered">
@@ -59,8 +63,8 @@
         <div class="flex-column-centered" style="width: 35%;">
           <input [formControl]="busqueda" class="text-input" style="width: 80%;margin-top: 2vw" type="text" placeholder="Buscar">
           <div class="flex-column-entered" style="margin:0.5vw">
-            <button class="boton-circular b-azul bckg-img-boton btn-genero" style="background-image: url(../../assets/images/genero-femenino.png);" (click)="filtraGen('f')" [class]="this.filtroAcGen == 'f' ? 'b-verde' : 'b-azul b-azul-hover'"></button>
-            <button class="boton-circular b-azul bckg-img-boton btn-genero" style="background-image: url(../../assets/images/genero-masculino.png);" (click)="filtraGen('m')" [class]="this.filtroAcGen == 'm' ? 'b-verde' : 'b-azul b-azul-hover'"></button>
+            <button class="boton-circular b-azul b-scale bckg-img-boton btn-genero" style="background-image: url(../../assets/images/genero-femenino.png);" (click)="filtraGen('f')" [class]="this.filtroAcGen == 'f' ? 'b-verde' : 'b-azul b-azul-hover'"></button>
+            <button class="boton-circular b-azul b-scale bckg-img-boton btn-genero" style="background-image: url(../../assets/images/genero-masculino.png);" (click)="filtraGen('m')" [class]="this.filtroAcGen == 'm' ? 'b-verde' : 'b-azul b-azul-hover'"></button>
           </div>
         </div>
       </div>
@@ -72,11 +76,11 @@
 
     <!-- Paginacion arriba -->
     <div class="pag-menu flex-centered">
-      <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
+      <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
       <ng-container *ngIf="this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length < 25; else paginacionComprimida">
         <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter)">
-          <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+          <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
       </ng-container>
 
@@ -84,7 +88,7 @@
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(0, 11)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
@@ -96,12 +100,12 @@
         <!-- Paginacion mid -->
         <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length - 10">
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
@@ -113,26 +117,26 @@
         <!-- Paginacion end -->
         <ng-container #midOfin *ngIf="this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length - 11 < page_number">
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length - 12, this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
       </ng-template>
 
-      <button [style.visibility]="max_items < listaVillagers.length && page_number * max_items < (listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaVillagers)"> > </button>
+      <button [style.visibility]="max_items < listaVillagers.length && page_number * max_items < (listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaVillagers)"> > </button>
     </div>
 
     <!-- Grid -->
     <div class="grid-w-gap" style="margin: 1vw 0">
         <ng-container *ngFor="let villager of listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter | paginacion:page_number:max_items">
           <div class="grid-item-wrap flex-column-centered" style="justify-content: space-evenly;">
-            <div style="width: 8vw; height: 8vw;" class="flex-centered">
-              <img (click)="mostrar($event, villager)" [src]="villager.iconImage" style="cursor: pointer;max-width: 100%;max-height: 100%;" [id]='villager.translations.spanish.replace(" ", "")'>
+            <div (click)="mostrar($event, villager)" style="cursor: pointer;width: 8vw; height: 8vw;" class="wrap-scale flex-centered">
+              <img [src]="villager.iconImage" style="max-width: 100%;max-height: 100%;" [id]='villager.translations.spanish.replace(" ", "")'>
             </div>
             <span>{{villager.translations.spanish | capitalize}}</span>
           </div>
@@ -140,7 +144,7 @@
     </div>
 
     <ng-container *ngIf="(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter | paginacion:page_number:max_items).length == 0" >
-      <div class="flex-column-centered" style="margin: 3% 0">
+      <div class="flex-column-centered no-result" style="margin: 3% 0">
         <img src="../../assets/images/error.png" style="width: 10vw;">
         <p><strong>No hubo resultados</strong></p>
       </div>
@@ -148,11 +152,11 @@
 
     <!-- Paginacion abajo -->
     <div class="pag-menu flex-centered" [style.padding-top]="(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter | paginacion:page_number:max_items).length < 6 ? '12vw' : '0' ">
-      <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
+      <button [style.visibility]="page_number != 1 ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAtras(page_number)"> < </button>
 
       <ng-container *ngIf="this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length < 25; else paginacionComprimida">
         <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter)">
-          <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+          <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
         </ng-container>
       </ng-container>
 
@@ -160,7 +164,7 @@
         <!-- Paginacion start -->
         <ng-container *ngIf="page_number < 11">
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(0, 11)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
@@ -172,12 +176,12 @@
         <!-- Paginacion mid -->
         <ng-container #mid *ngIf="10 < page_number && page_number < this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length - 10">
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(page_number-4, page_number+3)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
@@ -189,18 +193,18 @@
         <!-- Paginacion end -->
         <ng-container #midOfin *ngIf="this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length - 11 < page_number">
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(0, 2)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
           <button class="b-darkBlue b-pag">·</button>
           <button class="b-darkBlue b-pag">·</button>
           <ng-container *ngFor="let pag of this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).slice(this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length - 12, this.getPaginas(listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length)">
-            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-pag'" (click)="page_number = pag">{{pag}}</button>
+            <button [class]="pag == page_number ? 'b-darkGreen b-pag' : 'b-darkBlue b-scale b-pag'" (click)="page_number = pag">{{pag}}</button>
           </ng-container>
         </ng-container>
 
       </ng-template>
 
-      <button [style.visibility]="max_items < listaVillagers.length && page_number * max_items < (listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-verde" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaVillagers)"> > </button>
+      <button [style.visibility]="max_items < listaVillagers.length && page_number * max_items < (listaVillagers | filtraVecinos:filtroAcPersonalidad:specie.value:filtroAcGen | filtroAc:nameFilter).length ? 'visible' : 'hidden'" class="boton-circular b-azul-hover b-scale" (click)="page_number = this._pag.pagAlante(page_number, max_items, listaVillagers)"> > </button>
     </div>
 
   </div>
